--- a/hugo.yaml
+++ b/hugo.yaml
@@ -31,6 +31,8 @@ params:
 
   summarylength: 10000
   hidemeta: true
+  Truncated: false
+  ShowBreadCrumbs: true
 
   cover:
     hidden: false
@@ -77,10 +79,10 @@ params:
     shouldSort: true
     location: 0
     distance: 1000
-    threshold: 0.4
+    threshold: 0
     minMatchCharLength: 0
     # limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
-    keys: ["title", "permalink", "summary", "content"]
+    keys: ["title", "summary", "content"]
 
 menu:
   main:
