--- a/config.yml
+++ b/config.yml
@@ -57,7 +57,7 @@ params:
       and writing clean, maintainable code, to choosing the right tools for the job.
       You'll see a mix of technologies and programming languages as I enjoy working across the stack
       and diving into new domains whenever the chance arises.
-      Alongside building, I'm always seeking to understand the “why” behind the “how,” and learning from every challenge.
+      Alongside building, I'm always seeking to understand the "why" behind the "how", and learning from every challenge.
       
       
       Whether you're here to evaluate my technical skills or just to see what I've been working on,
