--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://portfolio.hungcq.xyz/
+baseURL: https://portfolio.hungcq.com/
 languageCode: en-us
 title: Portfolio | HungCQ
 theme: PaperMod
